Fix links alignment.

--- a/src/routes/search/components/ResultsListItem.css
+++ b/src/routes/search/components/ResultsListItem.css
@@ -105,7 +105,7 @@
 .page-search .results-list-item .links {
     position: absolute;
     right: 0;
-    bottom: 0;
+    bottom: 5px;
     opacity: 0;
     transition: opacity 0.2s linear;
 }
